added explore jobs by category part
incorporated explore jobs by category part in landing page

--- a/index.html
+++ b/index.html
@@ -62,6 +62,75 @@
                 <span class="job-box"><a href="#"> <img src="./resources/cw.png" alt="Content Writer" class="icon2 icon"><p class="job">  Content Writer</p></a></span>
                 <span class="job-box"><a href="#"> <img src="./resources/ds.png" alt="Data scientist" class="icon3 icon"> <p class="job"> Data Scientist</p></a></span>
             </div>
+		                <br>
+            <br>
+            <h1>Explore Jobs by Category</h1>
+            <div class="card-information">
+    <div class="cards">
+        <div class="card card1">
+            <div class="container">
+                <img src="./resources/Software engineer.jpeg" alt="software Developer">
+            </div>
+            <div class="details">
+                <h2>Software Developer</h2>
+                <p>Recruitment open for any tech savvy specialised in developmental prowess</p>
+                <button><a href="./resources/Software developer.html" target="_blank">Apply here</a></button>
+            </div>
+        </div>
+        <div class="card card2">
+            <div class="container">
+                <img src="./resources/government-jobs.jpg" alt="government-jobs">
+            </div>
+            <div class="details">
+                <br>
+                <h2>Government Employee</h2>
+                <p>Recruitment open for people with apposite educational qualification</p>
+                <button><a href="./resources/government-jobs.html" target="_blank">Apply here</a></button>
+            </div>
+        </div>
+        <div class="card card3">
+            <div class="container">
+                <img src="./resources/data scientist.jpg" alt="Data Scientist">
+            </div>
+            <div class="details">
+                <h2>Data Scientist</h2>
+                <p>Recruitment open for analytics of broad spectrum of data</p>
+                <button><a href="./resources/data scientist.html" target="_blank">Apply here</a></button>
+            </div>
+        </div>
+        <div class="card card4">
+            <div class="container">
+                <img src="./resources/defence personnel.jpg" alt="defence personnel">
+            </div>
+            <div class="details">
+                <br>
+                <h2>Defence Personnel</h2>
+                <p>Recruitment open for physically fit people who aspire to be the future brave martyrs of India</p>
+                <button><a href="./resources/Defencejobs.html" target="_blank">Apply here</a></button>
+            </div>
+        </div>
+        <div class="card card5">
+            <div class="container">
+                <img src="./resources/entrepreneur.jpg" alt="entrepreneur">
+            </div>
+            <div class="details">
+                <h2>Entrepreneur</h2>
+                <p>Financial amenities given to initiate start-ups for people to become the future tycoons</p>
+                <button><a href="./resources/entrepreneur.html" target="_blank">Apply here</a></button>
+            </div>
+        </div>
+        <div class="card card6">
+            <div class="container">
+                <img src="./resources/writer.jpg" alt="Writer">
+            </div>
+            <div class="details">
+                <h2>Content Writer</h2>
+                <p>Recruitment open for avid writers to expatiate their notions</p>
+                <button><a href="./resources/writer.html" target="_blank">Apply here</a></button>
+            </div>
+        </div>
+    </div>
+            </div>
         </div>
     </div>
     <div class="rgt-banner">
